--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -4,7 +4,6 @@
 
 ## 配置`JAVA`环境
 
-```
-sudo apt-get install openjdk-8-jdk
-java -version                       // 查看java版本
-```
+[ubuntu18.04安装jdk](https://blog.csdn.net/weixin_38883338/article/details/82079194)
+
+------------------
