--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -6,6 +6,6 @@
 
 [ubuntu18.04安装jdk](https://blog.csdn.net/weixin_38883338/article/details/82079194)
 
-&emsp; 使用`sudo vim ~/.bashrc`来配置环境变量。
+&使用`sudo vim ~/.bashrc`配置环境变量。
 
 ------------------
