--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -8,4 +8,8 @@
 
 &emsp; 使用`sudo vim ~/.bashrc`配置环境变量。
 
+## 安装`hadoop`
+
+[Ubuntu18.04安装hadoop](https://blog.csdn.net/weixin_38883338/article/details/82928809)
+
 ------------------
