--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -12,4 +12,6 @@
 
 [Ubuntu18.04安装hadoop](https://blog.csdn.net/weixin_38883338/article/details/82928809)
 
+[ubuntu18.04安装Hadoop（补充说明）](https://blog.csdn.net/weixin_42001089/article/details/81865101)
+
 ------------------
