--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -14,4 +14,11 @@
 
 [ubuntu18.04安装Hadoop（补充说明）](https://blog.csdn.net/weixin_42001089/article/details/81865101)
 
+
+&emsp; 查看所有`hadoop`示例：
+
+```
+./bin/hadoop jar ./share/hadoop/mapreduce/hadoop-mapreduce-examples-3.3.0.jar
+```
+
 ------------------
