--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -1,6 +1,6 @@
 # 实验一：企业云实践应用
 
-[参考教程：spark的安装和使用](https://www.cnblogs.com/dion-90/articles/9058500.html)
+[总参考教程：spark的安装和使用](https://www.cnblogs.com/dion-90/articles/9058500.html)
 
 ------------------
 
@@ -17,10 +17,12 @@
 [ubuntu18.04安装Hadoop（补充说明）](https://blog.csdn.net/weixin_42001089/article/details/81865101)
 
 
-&emsp; 查看所有`hadoop`示例：
+&emsp; 查看所有`hadoop`示例（使用见总参考教程）：
 
 ```
 ./bin/hadoop jar ./share/hadoop/mapreduce/hadoop-mapreduce-examples-3.3.0.jar
 ```
+
+&emsp; 注意，每次运行完需要将`./output`删除。
 
 ------------------
