--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -10,12 +10,13 @@
 
 &emsp; 使用`sudo vim ~/.bashrc`配置环境变量。
 
-## 安装`hadoop`
+-------------------
+
+## 安装和使用`hadoop`
 
 [Ubuntu18.04安装hadoop](https://blog.csdn.net/weixin_38883338/article/details/82928809)
 
 [ubuntu18.04安装Hadoop（补充说明）](https://blog.csdn.net/weixin_42001089/article/details/81865101)
-
 
 &emsp; 查看所有`hadoop`示例（使用见总参考教程）：
 
@@ -25,6 +26,8 @@
 
 &emsp; 注意，每次运行完需要将`./output`删除。
 
-&emsp; 
+&emsp; `hadoop`集群配置：[hadoop集群配置](https://medium.com/@jootorres_11979/how-to-set-up-a-hadoop-3-2-1-multi-node-cluster-on-ubuntu-18-04-2-nodes-567ca44a3b12)
 
 ------------------
+
+## 安装`Spark`
