--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -10,6 +10,8 @@
 
 &emsp; 使用`sudo vim ~/.bashrc`配置环境变量。
 
+&emsp; 注意，重新分配弹性IP后再次SSH连接会出现`WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!`的报错，此时需要执行`vim ~/.ssh/known_hosts`，并清空相关IP地址下的内容。
+
 -------------------
 
 ## 安装和使用`hadoop`
