--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -30,7 +30,7 @@
 
 &emsp; `hadoop`集群配置：[hadoop集群配置](https://medium.com/@jootorres_11979/how-to-set-up-a-hadoop-3-2-1-multi-node-cluster-on-ubuntu-18-04-2-nodes-567ca44a3b12)
 
-&emsp; 在运行守护进程时，将`start-dfs.sh`改为`./sbin/start-dfs.sh`
+&emsp; 在运行`HDFS`时，将`start-dfs.sh`改为`./sbin/start-dfs.sh`
 
 ------------------
 
