--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -32,6 +32,30 @@
 
 &emsp; 在运行`HDFS`时，将`start-dfs.sh`改为`./sbin/start-dfs.sh`
 
+&emsp; 在`/usr/local/hadoop/test`目录下运行编译`javac test.java`时报错：
+
+```
+hadoop@hadoop-master:/usr/local/hadoop/test$ javac test.java
+test.java:1: error: package org.apache.hadoop.io does not exist
+import org.apache.hadoop.io.IntWritable;
+                           ^
+test.java:2: error: package org.apache.hadoop.io does not exist
+import org.apache.hadoop.io.LongWritable;
+                           ^
+test.java:3: error: package org.apache.hadoop.io does not exist
+import org.apache.hadoop.io.NullWritable;
+                           ^
+test.java:4: error: package org.apache.hadoop.io does not exist
+import org.apache.hadoop.io.Text;
+                           ^
+test.java:5: error: package org.apache.hadoop.mapreduce does not exist
+import org.apache.hadoop.mapreduce.Mapper;
+                                  ^
+5 errors
+```
+
+&emsp; 解决方案是改为`javac test.java -cp $(hadoop classpath)`
+
 ------------------
 
 ## 安装`Spark`
