--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -20,6 +20,8 @@
 
 [ubuntu18.04安装Hadoop（补充说明）](https://blog.csdn.net/weixin_42001089/article/details/81865101)
 
+[主要：hadoop集群配置](https://medium.com/@jootorres_11979/how-to-set-up-a-hadoop-3-2-1-multi-node-cluster-on-ubuntu-18-04-2-nodes-567ca44a3b12)
+
 &emsp; 查看所有`hadoop`示例（使用见总参考教程）：
 
 ```
@@ -27,8 +29,6 @@
 ```
 
 &emsp; 注意，每次运行完需要将`./output`删除。
-
-&emsp; `hadoop`集群配置：[hadoop集群配置](https://medium.com/@jootorres_11979/how-to-set-up-a-hadoop-3-2-1-multi-node-cluster-on-ubuntu-18-04-2-nodes-567ca44a3b12)
 
 &emsp; 在运行`HDFS`时，将`start-dfs.sh`改为`./sbin/start-dfs.sh`
 
@@ -59,3 +59,5 @@ import org.apache.hadoop.mapreduce.Mapper;
 ------------------
 
 ## 安装`Spark`
+
+[Spark安装和集群搭建](https://medium.com/@jootorres_11979/how-to-install-and-set-up-an-apache-spark-cluster-on-hadoop-18-04-b4d70650ed42)
