--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -61,3 +61,7 @@ import org.apache.hadoop.mapreduce.Mapper;
 ## 安装`Spark`
 
 [Spark安装和集群搭建](https://medium.com/@jootorres_11979/how-to-install-and-set-up-an-apache-spark-cluster-on-hadoop-18-04-b4d70650ed42)
+
+&emsp; `Spark shell`运行`.scala`程序：`:load [host path]/test.scala`。退出shell：`:quit`
+
+
