--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -64,4 +64,19 @@ import org.apache.hadoop.mapreduce.Mapper;
 
 &emsp; `Spark shell`运行`.scala`程序：`:load [host path]/test.scala`。退出shell：`:quit`
 
+-----------------
+
+```
+export JAVA_HOME=/usr/lib/jvm/jdk1.8.0_271
+export JRE_HOME=${JAVA_HOME}/jre  
+export CLASSPATH=.:${JAVA_HOME}/lib:${JRE_HOME}/lib  
+export PATH=${JAVA_HOME}/bin:$PATH
+```
+
+
+
+
+
+
+
 
