--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -87,6 +87,8 @@ ssh-keygen -t rsa -P ""
 cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
 ssh localhost
 ```
-
+```
+export JAVA_HOME=/usr/lib/jvm/jdk-1.8.0_271/
+```
 
 
