--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -91,4 +91,9 @@ ssh localhost
 export JAVA_HOME=/usr/lib/jvm/jdk-1.8.0_271/
 ```
 
+```
+PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/local/hadoop/bin:/usr/local/hadoop/sbin$
+JAVA_HOME="/usr/lib/jvm/jdk1.8.0_271/jre"
+```
+
 
