--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -96,5 +96,10 @@ PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/
   games:/usr/local/games:/usr/local/hadoop/bin:/usr/local/hadoop/sbin$
 JAVA_HOME="/usr/lib/jvm/jdk1.8.0_271/jre"
 ```
-
+```
+sudo usermod -aG hadoop hadoop
+sudo chown hadoop:root -R /usr/local/hadoop/
+sudo chmod g+rwx -R /usr/local/hadoop/
+sudo adduser hadoop sudo
+```
 
