--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -103,3 +103,15 @@ sudo chmod g+rwx -R /usr/local/hadoop/
 sudo adduser hadoop sudo
 ```
 
+```
+ssh-copy-id hadoop@hadoop-master
+ssh-copy-id hadoop@hadoop-slave1
+ssh-copy-id hadoop@hadoop-slave2
+```
+
+
+
+
+
+
+
