--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -109,7 +109,14 @@ ssh-copy-id hadoop@hadoop-slave1
 ssh-copy-id hadoop@hadoop-slave2
 ```
 
-
+```
+<configuration>
+<property>
+<name>fs.defaultFS</name>
+<value>hdfs://hadoop-master:9000</value>
+</property>
+</configuration>
+```
 
 
 
