--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -133,5 +133,8 @@ ssh-copy-id hadoop@hadoop-slave2
 </configuration>
 ```
 
-
+```
+scp /usr/local/hadoop/etc/hadoop/* hadoop-slave1:/usr/local/hadoop/etc/hadoop/
+scp /usr/local/hadoop/etc/hadoop/* hadoop-slave2:/usr/local/hadoop/etc/hadoop/
+```
 
