--- a/CS236-Cloud-Computing-Technology/实验一.md
+++ b/CS236-Cloud-Computing-Technology/实验一.md
@@ -152,7 +152,12 @@ export HADOOP_MAPRED_HOME=$HADOOP_HOME
 export HADOOP_YARN_HOME=$HADOOP_HOME
 ```
 
-
+```
+<property>
+<name>yarn.resourcemanager.hostname</name>
+<value>hadoop-master</value>
+</property>
+```
 
 
 
